--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 logging.level.guru=debug
 server.port=8081
 sfg.brewery.beer-service-host=http://localhost:8080
+
+#defaults for docker image vromero/activemq-artemis
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
+# Windows Docker specifics
+spring.artemis.host=192.168.99.100
