Reduce log level for SQL. Show debug output for Java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-logging.level.guru=debug
+## Server
 server.port=8081
 sfg.brewery.beer-service-host=http://localhost:8080
 
+## Logging
+logging.level.guru.springframework=debug
+
+## ActiveMQ
 #defaults for docker image vromero/activemq-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
