Correct logging settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 sfg.brewery.beer-service-host=http://localhost:8080
 
 ## Logging
-logging.level.guru.springframework=debug
+logging.level.guru=debug
 
 ## ActiveMQ
 #defaults for docker image vromero/activemq-artemis
